<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_reservation"
    tools:context="cz.milner.hotel.Reservation"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/headline"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/registration_title"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_name"/>
            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_address"/>
            <EditText
                android:id="@+id/editTextTelephone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLength="9"
                android:hint="@string/registration_telephone"/>
            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_email"/>
            <!--datepicker-->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/registration_headings"
                android:text="@string/registration_days_prompt"/>
            <Spinner
                android:id="@+id/registration_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:entries="@array/registration_days"/>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/registration_headings"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/registration_room"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/registration_boxes"
                    android:text="@string/registration_room_one"/>
                <RadioButton
                    android:id="@+id/radio_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/registration_boxes"
                    android:text="@string/registration_room_two"/>
                <RadioButton
                    android:id="@+id/radio_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/registration_boxes"
                    android:text="@string/registration_room_three"/>
            </RadioGroup>
            <CheckBox
                android:id="@+id/checkboxBreakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/registration_boxes"
                android:text="@string/registration_breakfast"/>
            <ToggleButton
                android:id="@+id/toggleButtonSmoker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/registration_nonsmoker"
                android:textOn="@string/registration_smoker"/>
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/button_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:textSize="@dimen/registration_buttons"
                    android:text="@string/registration_button_send"
                    android:background="@color/colorAccept"/>
                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/registration_buttons"
                    android:text="@string/registration_button_cancel"
                    android:background="@color/colorDecline"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
